[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/tube-parts/tube-neck.png" type="Texture" id=1]
[ext_resource path="res://assets/tube-parts/tube-end.png" type="Texture" id=2]
[ext_resource path="res://code/obstacle.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 308 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 308 )

[sub_resource type="LineShape2D" id=3]
normal = Vector2( -1, 0 )

[node name="obstacle" type="Node2D"]
script = ExtResource( 3 )

[node name="upper_tube" type="Node2D" parent="."]
position = Vector2( 0, -37 )
__meta__ = {
"_edit_lock_": true
}

[node name="tube_head_sprite" type="Sprite" parent="upper_tube"]
scale = Vector2( 1, -1 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="tube_neck_sprite" type="Sprite" parent="upper_tube"]
position = Vector2( 0, -308 )
scale = Vector2( 1, 18.25 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="hitbox" type="Area2D" parent="upper_tube"]
position = Vector2( 0, 50 )
collision_layer = 2
__meta__ = {
"_edit_lock_": true
}

[node name="collision_shape_2d" type="CollisionShape2D" parent="upper_tube/hitbox"]
position = Vector2( 0, -342 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="lower_tube" type="Node2D" parent="."]
position = Vector2( 0, 37 )
__meta__ = {
"_edit_lock_": true
}

[node name="tube_head_sprite" type="Sprite" parent="lower_tube"]
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="tube_neck_sprite" type="Sprite" parent="lower_tube"]
position = Vector2( 0, 308 )
scale = Vector2( 1, 18.25 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="hitbox" type="Area2D" parent="lower_tube"]
position = Vector2( 0, -50 )
collision_layer = 2
__meta__ = {
"_edit_lock_": true
}

[node name="collision_shape_2d" type="CollisionShape2D" parent="lower_tube/hitbox"]
position = Vector2( 0, 342 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="pointbox" type="Area2D" parent="."]
collision_layer = 0
__meta__ = {
"_edit_lock_": true
}

[node name="collision_shape_2d" type="CollisionShape2D" parent="pointbox"]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="body_entered" from="upper_tube/hitbox" to="." method="_on_upper_hitbox_body_entered"]
[connection signal="body_entered" from="lower_tube/hitbox" to="." method="_on_lower_hitbox_body_entered"]
[connection signal="body_entered" from="pointbox" to="." method="_on_pointbox_body_entered"]
